--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["php82", "php82Extensions.pdo_mysql", "php82Extensions.bcmath", "php82Extensions.fileinfo", "php82Extensions.tokenizer", "php82Extensions.mbstring", "php82Extensions.curl", "php82Extensions.gd", "php82Extensions.zip", "php82Extensions.intl", "nodejs_20", "npm-9_x", "nginx"]
+nixPkgs = ["php84", "php84Extensions.pdo_mysql", "php84Extensions.pdo_pgsql", "php84Extensions.bcmath", "php84Extensions.fileinfo", "php84Extensions.tokenizer", "php84Extensions.mbstring", "php84Extensions.curl", "php84Extensions.gd", "php84Extensions.zip", "php84Extensions.intl", "nodejs_20", "npm-9_x", "nginx", "unzip"]
 
 [phases.build]
 cmds = [
